Remove 'DTO' from generated swagger schema names
