# clientApp/src/api/generatedSdk/models/index.ts
@@ -3,13 +3,13 @@
 export * from './AddTransactionsRequest';
 export * from './CreateUserRequest';
 export * from './CreateUserResult';
-export * from './FiatCurrencyTypeDTO';
+export * from './FiatCurrencyType';
 export * from './LoginRequest';
 export * from './LoginResult';
 export * from './ReauthenticateWithRefreshTokenResult';
 export * from './ResetPasswordStepOneRequest';
 export * from './ResetPasswordStepTwoRequest';
 export * from './SingleTransaction';
-export * from './TransactionDTO';
-export * from './TransactionDTOPaginationResult';
-export * from './UserDTO';
+export * from './Transaction';
+export * from './TransactionPaginationResult';
+export * from './User';
